# MINPAKU

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  line.py  properties.py  revenue.py
backend/app/models/: property.py
backend/app/services/: auth.py  db.py  line_service.py  pdf_generator.py
frontend/: .env  .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts
frontend/src/components/: Dashboard.tsx  Login.tsx  PropertyForm.tsx  RevenueReport.tsx
frontend/src/utils/: auth.ts
